--- a/client/style.css
+++ b/client/style.css
@@ -1,7 +1,3 @@
-:root {
-  ---alsdfj--lasfkjd: asdlfkjasdlkfj
-}
-
 body {
   margin: 0;
   font-family: Calibri, 'Trebuchet MS', sans-serif;
@@ -12,9 +8,23 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
-  background: #dae2f8;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(90deg, #d6a4a4, #dae2f8);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(90deg, #d6a4a4, #dae2f8); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  /* background: -webkit-linear-gradient(90deg, #d6a4a4, #dae2f8);  /* Chrome 10-25, Safari 5.1-6 */
+  /* background: linear-gradient(90deg, #d6a4a4, #dae2f8); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
 
 .messages-container {
@@ -103,7 +113,7 @@ body {
   border-bottom: 20px solid var(--left-color);
   border-top: 20px solid #B4F8C8;
   left: -20px;
-  top: -25px;
+  top: -30px;
 }
 
 .right {
@@ -139,18 +149,19 @@ body {
   border-bottom: 20px solid var(--right-color);
   border-top: 20px solid #FEF7EC;
   right: -9px;
-  top: -25px;
+  top: -30px;
 
 }
 
 .message-time {
-  color: rgb(150, 150, 150);
+  color: rgb(148, 148, 148);
   padding-top: 5px;
-  font-size: 0.7rem;
+  font-size: 0.85rem;
+  text-align: right;
 }
 
 .right .message-text {
-  text-align: right;
+  text-align: left;
 }
 
 .right .message-time {
